# S.U.N.D.A.Y

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Project Management.md  README.md  REVIEW.md  SystemHealthCheck.ps1  mkdocs.yml  pyproject.toml  run_sunday.ps1  start_sunday_all.ps1  system_health_check.py  test_body.json  test_ldt.py
docs/: downloads.md  index.md  leaderboard.md
frontend/: dev.ps1  index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs  overlay.html  state.rs
graphify-out/: .graphify_root  GRAPH_REPORT.md  manifest.json
harness-stress-test/: performance_baseline.json
mtp-lab/: README.md  clear_port_8084.ps1  (+10 more)
rust/: Cargo.toml
rust/.cargo/: config.toml
rust/crates/sunday-a2a/: Cargo.toml
rust/crates/sunday-a2a/src/: lib.rs
rust/crates/sunday-agents/: Cargo.toml
rust/crates/sunday-agents/src/: helpers.rs  lib.rs  loop_guard.rs  monitor_operative.rs  native_openhands.rs  native_react.rs  orchestrator.rs  runtime.rs  simple.rs  traits.rs  utils.rs
rust/crates/sunday-agents/src/parsing/: browser_cleaner.rs  context_optimizer.rs  mod.rs  response_parser.rs  skill_auto_creator.rs  slack_formatter.rs  tag_stripper.rs  tool_extractor.rs  user_model.rs
rust/crates/sunday-bench/: Cargo.toml
rust/crates/sunday-bench/src/: lib.rs  result.rs  stats.rs  suite.rs  traits.rs
rust/crates/sunday-bench/src/benchmarks/: energy.rs  latency.rs  mod.rs  throughput.rs
rust/crates/sunday-channels/: Cargo.toml
rust/crates/sunday-channels/src/: error.rs  lib.rs  line.rs  slack.rs  telegram.rs  traits.rs  whatsapp.rs
rust/crates/sunday-cli/: Cargo.toml
rust/crates/sunday-cli/src/: main.rs  tui.rs
rust/crates/sunday-core/: Cargo.toml
rust/crates/sunday-core/src/: config.rs  error.rs  events.rs  hardware.rs  lib.rs  model_catalog.rs  registry.rs  shared_mem.rs  tokenizer.rs  types.rs
rust/crates/sunday-discord/: Cargo.toml
rust/crates/sunday-discord/src/: lib.rs  main.rs
rust/crates/sunday-engine/: Cargo.toml
rust/crates/sunday-engine/src/: discovery.rs  engine_enum.rs  lib.rs  llamacpp.rs  native.rs  ollama.rs  openai_compat.rs  rig_adapter.rs  sglang.rs  traits.rs  vllm.rs
rust/crates/sunday-harness/: Cargo.toml
rust/crates/sunday-harness/src/: assertions.rs  boot.rs  browser.rs  config.rs  healing.rs  lib.rs  parallel.rs  performance.rs  runner.rs  visual.rs
rust/crates/sunday-learning/: Cargo.toml
rust/crates/sunday-learning/src/: agent_evolver.rs  bandit.rs  grpo.rs  heuristic.rs  learning_orchestrator.rs  lib.rs  orchestrator_types.rs  reward.rs  router_enum.rs  skill_evolution.rs  training_data.rs  traits.rs
rust/crates/sunday-learning/src/optimize/: engine.rs  llm_optimizer.rs  mod.rs  search_space.rs  store.rs  types.rs
rust/crates/sunday-mcp/: Cargo.toml
rust/crates/sunday-mcp/src/: server.rs
rust/crates/sunday-memory/: Cargo.toml
rust/crates/sunday-memory/src/: chunking.rs  dedupe.rs  episodic.rs  knowledge_graph.rs  lib.rs  schema.rs
rust/crates/sunday-mining/: Cargo.toml
rust/crates/sunday-mining/src/: lib.rs
rust/crates/sunday-python/: Cargo.toml  pyproject.toml
rust/crates/sunday-python/src/: a2a.rs  agents.rs  bench.rs  core.rs  engine.rs  harness.rs  learning.rs  lib.rs  mcp.rs  recipes.rs  sandbox.rs  scheduler.rs  security.rs  sessions.rs  skills.rs  storage.rs  system.rs  telemetry.rs  templates.rs  tools.rs  traces.rs  workflow.rs
rust/crates/sunday-recipes/: Cargo.toml
rust/crates/sunday-recipes/src/: lib.rs
rust/crates/sunday-sandbox/: Cargo.toml
rust/crates/sunday-sandbox/src/: lib.rs
rust/crates/sunday-scheduler/: Cargo.toml
rust/crates/sunday-scheduler/src/: lib.rs
rust/crates/sunday-security/: Cargo.toml
rust/crates/sunday-security/src/: audit.rs  capabilities.rs  guardrails.rs
rust/crates/sunday-server/: Cargo.toml
rust/crates/sunday-server/src/: app.rs  main.rs  memory_manager.rs  state.rs
rust/crates/sunday-server/src/middleware/: mod.rs
rust/crates/sunday-server/src/routes/: agents.rs  channels.rs  chat.rs  connectors.rs  digest.rs  health.rs  memory.rs  mod.rs  models.rs  sessions.rs  skills.rs  speech.rs  static_files.rs  telemetry.rs  tools.rs  traces.rs  upload.rs  webhooks.rs  ws.rs
rust/crates/sunday-sessions/: Cargo.toml
rust/crates/sunday-sessions/src/: lib.rs
rust/crates/sunday-skills/: Cargo.toml
rust/crates/sunday-skills/src/: lib.rs  parser.rs
rust/crates/sunday-speech/: Cargo.toml
rust/crates/sunday-speech/src/: lib.rs  stt.rs  tts.rs
rust/crates/sunday-system/: Cargo.toml
rust/crates/sunday-system/src/: builder.rs  bundles.rs  core.rs  lib.rs  orchestrator.rs  protocols.rs
rust/crates/sunday-telemetry/: Cargo.toml
rust/crates/sunday-telemetry/src/: aggregator.rs  instrumented.rs  store.rs
rust/crates/sunday-templates/: Cargo.toml
rust/crates/sunday-templates/src/: lib.rs
rust/crates/sunday-tools/: Cargo.toml
rust/crates/sunday-tools/src/: browser_ax.rs  browser_native.rs  browser_native_js.rs  executor.rs  lib.rs  rig_tools.rs  traits.rs
rust/crates/sunday-tools/src/builtin/: academic_search.rs  apply_patch.rs  browser_tools.rs  calculator.rs  code_analyzer.rs  crypto.rs  directory_tools.rs  file_tools.rs  git_tools.rs  grep.rs  hermes_tools.rs  http_tools.rs  memory_tools.rs  mod.rs  office_tools.rs  office_tools.rs.bak  planner.rs  repo_map.rs  scan_chunks.rs  shell.rs  system_health.rs  think.rs  web_fetch.rs  web_search.rs  workspace_tools.rs
rust/crates/sunday-tools/src/storage/: backend_enum.rs  bm25.rs  colbert.rs  embeddings.rs  faiss.rs  hybrid.rs  knowledge_graph.rs  mod.rs  pool.rs  sqlite.rs  traits.rs
rust/crates/sunday-traces/: Cargo.toml
rust/crates/sunday-traces/src/: analyzer.rs  collector.rs  store.rs
rust/crates/sunday-vision/: Cargo.toml
rust/crates/sunday-vision/src/: lib.rs
rust/crates/sunday-workflow/: Cargo.toml
rust/crates/sunday-workflow/src/: engine.rs  graph.rs  lib.rs  types.rs
(+1484 files in other folders)
