[workspace]
resolver = "2"
members = [
    "crates/sunday-core",
    "crates/sunday-engine",
    "crates/sunday-agents",
    "crates/sunday-tools",
    "crates/sunday-learning",
    "crates/sunday-telemetry",
    "crates/sunday-traces",
    "crates/sunday-security",
    "crates/sunday-mcp",
    "crates/sunday-python",
    "crates/sunday-sessions",
    "crates/sunday-workflow",
    "crates/sunday-skills",
    "crates/sunday-recipes",
    "crates/sunday-templates",
    "crates/sunday-a2a",
    "crates/sunday-scheduler",
    "crates/sunday-cli",
    "crates/sunday-discord", "crates/sunday-channels", "crates/sunday-vision",
    "crates/sunday-memory",
    "crates/sunday-bench",
    "crates/sunday-system",
    "crates/sunday-mining",
    "crates/sunday-harness",
    "crates/sunday-server",
    "crates/sunday-sandbox",
    "crates/sunday-speech",
]

[patch.crates-io]
esaxx-rs = { path = "patches/esaxx-rs" }

[workspace.dependencies]
# ... (existing)
# Add surrealdb
surrealdb = { version = "2.1", features = ["kv-mem", "kv-surrealkv"] }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "blocking", "rustls-tls"] }
rusqlite = { version = "0.32", features = ["bundled", "column_decltype"] }
regex = "1"
once_cell = "1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
parking_lot = "0.12"
async-trait = "0.1"
pyo3 = { version = "0.23", features = ["extension-module"] }
meval = "0.2"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tokio-stream = "0.1"
ed25519-dalek = { version = "2", features = ["rand_core"] }
fnmatch-regex = "0.2"
url = "2"
sysinfo = "0.33"
rig-core = "0.31"
r2d2 = "0.8"
r2d2_sqlite = "0.25.0"
schemars = "1"
tokenizers = { version = "0.21", default-features = false, features = ["onig"] }
rayon = "1"
clap = { version = "4", features = ["derive"] }
indicatif = "0.17"
futures-util = "0.3"
chromiumoxide = { version = "0.6", features = ["tokio-runtime"] }
ratatui = "0.29"
crossterm = "0.28"
tracing-subscriber = "0.3"
ort = { version = "2.0.0-rc.12", features = ["ndarray"] }
image = "0.25"
ndarray = "0.17"
memmap2 = "0.9"
named-lock = "0.3"
base64 = "0.22"
llama-cpp-2 = "0.1"
ego-tree = "0.10"
wasmtime = "26.0"
wasi-common = "26.0"
hound = "3.5"
cpal = "0.15"
candle-core = "0.8"
candle-transformers = "0.8"
candle-nn = "0.8"

windows = { version = "0.58", features = [
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
] }


