[package]
name = "sunday-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
sunday-core = { path = "../sunday-core" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
once_cell = { workspace = true }
futures = { workspace = true }
tokio-stream = { workspace = true }
rig-core = { workspace = true }
schemars = { workspace = true }
llama-cpp-2 = { workspace = true }
encoding_rs = "0.8"
regex = "1"



[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
