[package]
name = "sunday-learning"
version = "0.1.0"
edition = "2021"

[dependencies]
sunday-core = { path = "../sunday-core" }
sunday-traces = { path = "../sunday-traces" }
sunday-skills = { path = "../sunday-skills" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
parking_lot = { workspace = true }
rusqlite = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }

[dev-dependencies]
tempfile = "3"
