[package]
name = "sunday-memory"
version = "0.1.0"
edition = "2021"

[dependencies]
sunday-core = { path = "../sunday-core" }
surrealdb = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
