[package]
name = "sunday-tools"
version = "0.1.0"
edition = "2021"

[dependencies]
sunday-core = { path = "../sunday-core" }
sunday-engine = { path = "../sunday-engine" }
sunday-security = { path = "../sunday-security" }
sunday-skills = { path = "../sunday-skills" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
sunday-mining = { path = "../sunday-mining" }
reqwest = { workspace = true }
rusqlite = { workspace = true }
r2d2 = { workspace = true }
r2d2_sqlite = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }
parking_lot = { workspace = true }
meval = { workspace = true }
sha2 = { workspace = true }
chrono = { workspace = true }
rig-core = { workspace = true }
schemars = { workspace = true }
chromiumoxide = { workspace = true }
base64 = { workspace = true }
sunday-vision = { path = "../sunday-vision", optional = true }
futures = { workspace = true }
windows = { workspace = true, features = [
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Variant",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
] }

rand = { workspace = true }
sysinfo = { workspace = true }
anyhow = "1.0.102"
urlencoding = "2.1"

[features]
default = ["vision"]
vision = ["dep:sunday-vision"]

[dev-dependencies]
tempfile = "3"
