[package]
name = "sunday-workflow"
version = "0.1.0"
edition = "2021"

[dependencies]
sunday-core = { path = "../sunday-core" }
serde = { workspace = true }
serde_json = { workspace = true }
rusqlite = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
tracing = { workspace = true }
toml = { workspace = true }
petgraph = "0.8.3"
tokio = { workspace = true, features = ["full"] }
futures.workspace = true
anyhow = "1.0.102"
